--- a/Chess/Chess.vcxproj.filters
+++ b/Chess/Chess.vcxproj.filters
@@ -88,5 +88,11 @@
     <None Include="FX\Basic.fx">
       <Filter>FX</Filter>
     </None>
+    <None Include="FX\LightHelper.fx">
+      <Filter>FX</Filter>
+    </None>
+    <None Include="FX\Lighting.fx">
+      <Filter>FX</Filter>
+    </None>
   </ItemGroup>
 </Project>
