--- a/Chess/Chess.vcxproj
+++ b/Chess/Chess.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="GameLogic.h" />
     <ClInclude Include="GameView.h" />
     <ClInclude Include="GeometryGenerator.h" />
+    <ClInclude Include="LightHelper.h" />
     <ClInclude Include="Objects.h" />
     <ClInclude Include="xnacollision.h" />
   </ItemGroup>
@@ -94,6 +95,7 @@
     <ClCompile Include="GameLogic.cpp" />
     <ClCompile Include="GameView.cpp" />
     <ClCompile Include="GeometryGenerator.cpp" />
+    <ClCompile Include="Lighting.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Objects.cpp" />
     <ClCompile Include="xnacollision.cpp" />
