--- a/Chess/Chess.vcxproj.filters
+++ b/Chess/Chess.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="xnacollision.h">
       <Filter>Resource Files</Filter>
     </ClInclude>
+    <ClInclude Include="LightHelper.h">
+      <Filter>702</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Chess.cpp">
@@ -82,6 +85,9 @@
     </ClCompile>
     <ClCompile Include="xnacollision.cpp">
       <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Lighting.cpp">
+      <Filter>702</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
